--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework phiên bản %d+ chưa được cài đặt</string>
     <string name="app_notenabled">XPrivacy chưa được kích hoạt trong Xposed installer</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Chỉ hỗ trợ Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy phiên bản: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework phiên bản: %d</string>
     <string name="app_copyright">Bản quyền \u00A9 2013 bởi M. Bokhorst (M66B)</string>
