Update Catalan translation

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">La versió %d+ d\'Xposed framework no està instal·lada</string>
     <string name="app_notenabled">XPrivacy no està habilitat a l\'instal·lador d\'Xposed</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Només per a Android versió 4.0+</string>
     <string name="app_version" formatted="false">Versió d\'XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 per M. Bokhorst (M66B)</string>
