--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -2,12 +2,12 @@
 
     <string name="app_notxposed" formatted="false">Xposed sistemos versija %d+ neįdiegta</string>
     <string name="app_notenabled">XPrivacy neaktyvuota Xposed sistemoje</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Tik nuo Android 4.0+ versijos</string>
     <string name="app_version" formatted="false">XPrivacy versija: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Naudojimas</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_refresh">Atnaujinti</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Ruošiniai</string>
     <string name="menu_update">Tikrinti atnaujinimus</string>
