--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contacts</string>
     <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_email" translatable="false">E-mail</string>
