--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -36,6 +36,7 @@
     <string name="restrict_browser">Navegador (marcadors/historial)</string>
     <string name="restrict_calendar">Calendari</string>
     <string name="restrict_calling">Trucades (telèfon, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contactes</string>
     <string name="restrict_dictionary">Diccionari (usuari)</string>
     <string name="restrict_identification">Identificació (dispositiu)</string>
