--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -38,6 +38,7 @@
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_calling">Kommunizieren (Anrufe, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Kontakte</string>
     <string name="restrict_dictionary">Wörterbuch (Benutzer)</string>
     <string name="restrict_identification">Identifikation (Gerät)</string>
