--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
     <string name="restrict_calendar">Ημερολόγιο</string>
     <string name="restrict_calling">Κλήσεις (τηλέφωνο, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Επαφές</string>
     <string name="restrict_dictionary">Λεξικό (χρήστη)</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
