--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Navegador (marcadores/historial)</string>
     <string name="restrict_calendar">Calendario</string>
     <string name="restrict_calling">Llamadas (teléfono, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contactos</string>
     <string name="restrict_dictionary">Diccionario (usuario)</string>
     <string name="restrict_identification">Identificación (dispositivo)</string>
