--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Böngésző (könyvjelzők / előzmények)</string>
     <string name="restrict_calendar">Naptár</string>
     <string name="restrict_calling">Hívás (telefon, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Névjegyzék</string>
     <string name="restrict_dictionary">Szótár (felhasználó)</string>
     <string name="restrict_identification">Azonosító (eszköz)</string>
