--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendario</string>
     <string name="restrict_calling">Chiamate (Telefono, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contatti</string>
     <string name="restrict_dictionary">Dizionario (utente)</string>
     <string name="restrict_identification">Identificazione (dispositivo)</string>
