--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -38,6 +38,7 @@
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
     <string name="restrict_calendar">Kalendarz</string>
     <string name="restrict_calling">Połączenia (telefoniczne, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Kontakty</string>
     <string name="restrict_dictionary">Słownik (użytkownik)</string>
     <string name="restrict_identification">Identyfikacja (urządzenie)</string>
