--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -38,6 +38,7 @@
     <string name="restrict_browser">Браузер (закладки/история)</string>
     <string name="restrict_calendar">Календарь</string>
     <string name="restrict_calling">Инициация звонков, отправка SMS/MMS</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Контакты</string>
     <string name="restrict_dictionary">Пользовательский словарь</string>
     <string name="restrict_identification">Идентификация устройства</string>
