--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Браузер (букмаркови/историја)</string>
     <string name="restrict_calendar">Календар</string>
     <string name="restrict_calling">Позиви (телефон, СМС, ММС)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_dictionary">Речник (кориснички)</string>
     <string name="restrict_identification">Идентификација (уређај)</string>
