--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -38,6 +38,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_browser">Webbläsare (bokmärken/historik)</string>
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_calling">Ringa (telefon, SMS, MMS)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Kontakter</string>
     <string name="restrict_dictionary">Ordlista (användare)</string>
     <string name="restrict_identification">Identifikation (enhet)</string>
