--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -38,6 +38,7 @@
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
     <string name="restrict_calling">通话 (语音, 短信, 彩信)</string>
+    <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">联系人</string>
     <string name="restrict_dictionary">词典 (用户)</string>
     <string name="restrict_identification">识别码 (设备)</string>
