--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -54,6 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Zobrazení (v prohlížeči)</string>
     <string name="title_category">Kategorie:</string>
     <string name="title_restrict">Zaškrtněte pro omezení:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Zeměpisná šířka</string>
     <string name="settings_lon">Zeměpisná délka</string>
     <string name="settings_mac">MAC adresa</string>
