--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -54,6 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Εμφάνιση (browser)</string>
     <string name="title_category">Κατηγορία:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
     <string name="settings_mac">Διεύθυνση MAC</string>
