--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -54,6 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Ver (navegador)</string>
     <string name="title_category">Categoría:</string>
     <string name="title_restrict">Selecciona para restringir:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">Dirección MAC</string>
