--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -54,6 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Megtekintés (böngésző)</string>
     <string name="title_category">Kategória:</string>
     <string name="title_restrict">Jelölje be a korlátozáshoz:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Szélesség</string>
     <string name="settings_lon">Hosszúság</string>
     <string name="settings_mac">MAC-cím</string>
