--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -54,6 +54,7 @@
     <string name="restrict_view">表示 (ブラウザ)</string>
     <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
     <string name="settings_mac">MAC アドレス</string>
