--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -54,6 +54,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_view">Tonen (browser)</string>
     <string name="title_category">Categorie:</string>
     <string name="title_restrict">Vink aan om te beperken:</string>
+    <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
     <string name="settings_mac">MAC adres</string>
