--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -53,6 +53,7 @@
     <string name="restrict_view">Ver (navegador)</string>
     <string name="title_category">Categoria:</string>
     <string name="title_restrict">Clique para restringir:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">Endereço MAC</string>
