--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -54,6 +54,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Acces browser</string>
     <string name="title_category">Category:</string>
     <string name="title_restrict">Bifeaza pentru a restrictiona:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
     <string name="settings_mac">MAC address</string>
