--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,6 +60,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">View (browser)</string>
     <string name="title_category">Category:</string>
     <string name="title_restrict">Check to restrict:</string>
+    <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">MAC address</string>
